[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "versatile-task-queue"
description = "A versatile task queue library that supports virtual queue & priority"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["task queue", "priority", "virtual queue"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = ["pyyaml", "peewee~=3.17"]
requires-python = ">= 3.12"


[project.urls]
Homepage = "https://github.com/GitterRemote/vtq"
Issues = "https://github.com/GitterRemote/vtq/issues"
